create sidebar complate

--- a/public/index.html
+++ b/public/index.html
@@ -17,6 +17,35 @@
   </head>
   <body>
 
+    <nav id="sidebar">
+        <button id="trigger_btn" class="btn_trigger"><i class="fa-solid fa-arrow-right"></i></button>
+            <ul>
+                <li>
+                    <a href="#">
+                        <i class="fa-solid fa-house"></i>
+                        <span class="menu_text">Home</span>
+                    </a>
+                </li>
+                <li>
+                    <a href="#">
+                        <i class="fa-solid fa-circle-info"></i>
+                        <span class="menu_text">About</span>
+                    </a>
+                </li>
+                <li>
+                    <a href="#">
+                        <i class="fa-solid fa-gear"></i>
+                        <span class="menu_text">Services</span>
+                    </a>
+                </li>
+                <li>
+                    <a href="#">
+                        <i class="fa-solid fa-phone"></i>
+                        <span class="menu_text">Contact</span>
+                    </a>
+                </li>
+            </ul>
+    </nav>
     <!-- <<<< link javascript >>>> -->
     <script src="/js/app.js"></script>
   </body>
